--- a/style.css
+++ b/style.css
@@ -90,13 +90,14 @@ h1 {
 /* CARD SECTION */
 
 .card-section {
-   margin-top: 4.4rem;
+   margin: 4.4rem;
+   padding-bottom: 4.4rem;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 4rem;
    align-items: center;
-   width: 72rem;
+   width: 74rem;
    color: whitesmoke;
 }
 
@@ -106,8 +107,8 @@ h1 {
    align-items: center;
 
 
-   height: 32rem;
-   width: 20rem;
+   height: 36rem;
+   width: 22rem;
    background-color: #555;
    border-radius: 0.5rem;
    box-shadow: 0.3rem 0.3rem rgb(0, 0, 0, 0.1);
@@ -115,7 +116,7 @@ h1 {
 
 .card-name {
    font-size: 2rem;
-   padding: 2.5rem 2rem 1.5rem;
+   padding: 2.5rem 1rem 0rem;
 }
 
 .card-image {
@@ -135,4 +136,33 @@ h1 {
 .card-wind-direction {
    font-size: 1.4rem;
    margin-bottom: 1rem;
+}
+
+.card-btns {
+   display: flex;
+   justify-content: space-around;
+   width: 60%;
+}
+
+
+
+.btn-store,
+.btn-remove {
+   height: 4rem;
+   width: 4rem;
+   background-color: #777;
+   color: white;
+   border-radius: 0.4rem;
+   padding: 0.5rem;
+   cursor: pointer;
+}
+
+.btn-store:hover {
+   opacity: .8;
+   color: blue;
+}
+
+.btn-remove:hover {
+   opacity: .8;
+   color: red;
 }
