--- a/style.css
+++ b/style.css
@@ -166,3 +166,23 @@ h1 {
    opacity: .8;
    color: red;
 }
+
+/* CLEAR HISTORY */
+
+.clear-btn {
+   border-radius: 5px;
+   color: whitesmoke;
+   background-color: #555;
+   cursor: pointer;
+   font-size: 2.4rem;
+   font-weight: 600;
+   padding: 0.7rem 1.4rem;
+   border: none;
+   color: whitesmoke;
+   font-family: Arial, Helvetica, sans-serif;
+}
+
+.clear-btn:hover {
+   background-color: #444;
+   color: orangered;
+}
